fixed story-component overflow issue

--- a/src/app/story/story.component.css
+++ b/src/app/story/story.component.css
@@ -1,9 +1,8 @@
 :host {
   /* background-color: blue !important; */
   position: relative;
-  display: inline-block;
+  display: block;
   width: 100%;
-  overflow: hidden;
 }
 
 #amazed-dog-image {
@@ -21,6 +20,7 @@ section {
   margin-left: 208px;
   margin-right: auto;
   justify-content: space-between;
+  overflow: hidden;
 }
 
 .col {
